# rpi4-live-translator

./: CMakeLists.txt  Make  Makefile  README.md  display.py  main.cpp  st7735s_display.py  translate.py
